--- a/package.json
+++ b/package.json
@@ -21,17 +21,18 @@
     "@types/node": "^16.11.56",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/runtime-core": "^3.2.41",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.24.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.24",
     "sass": "^1.55.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "~4.7.4",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.8",
     "unplugin-vue-router": "^0.2.3",
     "vite": "^3.0.9",
     "vite-plugin-vuetify": "^1.0.0",
-    "vite-plugin-windicss": "^1.8.8",
-    "vue-tsc": "^0.40.7",
-    "windicss": "^3.5.6"
+    "vue-tsc": "^0.40.7"
   }
 }
