--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.24",
     "sass": "^1.55.0",
+    "swiper": "^9.4.1",
     "tailwindcss": "^3.3.2",
     "typescript": "~4.7.4",
     "unplugin-auto-import": "^0.11.2",
